# llm-runtime-manager

./: .gitignore  CONTEXT.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
config/: default.toml
core/: device.rs  mod.rs  model.rs  process.rs  scheduler.rs
docs/: ARCHITECTURE.md  PARAM_SYSTEM.md  ROADMAP.md  UI_Design_Document.md
docs/superpowers/plans/: 2026-06-29-model-capability-launcher.md
docs/superpowers/specs/: 2026-06-29-model-capability-launcher-design.md
scripts/: start.bat
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: device.rs  main.rs  models.rs  process.rs  recommend.rs  settings.rs
ui/: index.html  package.json
ui/src/: App.tsx  api.test.ts  api.ts  desktop-behavior.test.ts  main.tsx  styles.css  types.ts
