[package]
name = "llm-runtime-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
tauri = { version = "2.11.3", features = ["image-ico", "tray-icon"] }
tauri-plugin-dialog = "2.7.1"
walkdir = "2.5"
